--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -819,28 +819,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="XAh-it-9oj">
-                                <rect key="frame" x="0.0" y="152" width="414" height="224"/>
+                                <rect key="frame" x="0.0" y="112" width="414" height="197"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="8kq-oK-XG2">
-                                        <rect key="frame" x="92" y="0.0" width="230.5" height="74"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="8kq-oK-XG2">
+                                        <rect key="frame" x="92" y="0.0" width="230.5" height="59.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="(tripNameLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmg-6k-UBb">
-                                                <rect key="frame" x="0.0" y="0.0" width="230.5" height="50.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(tripNameLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmg-6k-UBb">
+                                                <rect key="frame" x="0.0" y="0.0" width="230.5" height="36"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="(tripDateLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="943-ut-naH">
-                                                <rect key="frame" x="0.0" y="54.5" width="230.5" height="19.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(tripDateLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="943-ut-naH">
+                                                <rect key="frame" x="0.0" y="40" width="230.5" height="19.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="zUu-Dn-PKu">
-                                        <rect key="frame" x="26" y="82" width="362" height="41"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="zUu-Dn-PKu">
+                                        <rect key="frame" x="26" y="67.5" width="362" height="41"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EOI-um-wmF">
                                                 <rect key="frame" x="0.0" y="0.0" width="169" height="41"/>
@@ -878,20 +878,20 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AkV-az-bj0">
-                                        <rect key="frame" x="136" y="131" width="142" height="55"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AkV-az-bj0">
+                                        <rect key="frame" x="136" y="116.5" width="142" height="42.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="7Tv-Ql-DXo">
-                                                <rect key="frame" x="0.0" y="0.0" width="142" height="34.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="142" height="22"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hotel/Airbnb" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9yx-tH-Ts4">
-                                                        <rect key="frame" x="0.0" y="0.0" width="95.5" height="34.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="108" height="22"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vc8-sL-RKQ">
-                                                        <rect key="frame" x="107.5" y="0.0" width="34.5" height="34.5"/>
+                                                        <rect key="frame" x="120" y="0.0" width="22" height="22"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="Vc8-sL-RKQ" secondAttribute="height" multiplier="1:1" id="T8I-oO-LPF"/>
                                                         </constraints>
@@ -903,8 +903,8 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="(hotelAirbnbLabel)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XT-XI-blc">
-                                                <rect key="frame" x="0.0" y="34.5" width="142" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(hotelAirbnbLabel)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2XT-XI-blc">
+                                                <rect key="frame" x="0.0" y="22" width="142" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -912,7 +912,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hfw-FK-YcH">
-                                        <rect key="frame" x="157" y="194" width="100" height="30"/>
+                                        <rect key="frame" x="157" y="167" width="100" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="LBF-w1-4Lo"/>
                                             <constraint firstAttribute="height" constant="30" id="jst-VA-mbr"/>
@@ -934,7 +934,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YaW-RH-2kG">
-                                <rect key="frame" x="0.0" y="376" width="414" height="394"/>
+                                <rect key="frame" x="0.0" y="309" width="414" height="461"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="dayActivityCell" rowHeight="84" id="ZFK-4b-qpp" customClass="dayActivitiesTableViewCell" customModule="Va_cay" customModuleProvider="target">
@@ -1001,7 +1001,7 @@
                         <constraints>
                             <constraint firstItem="Kt4-rp-uxJ" firstAttribute="bottom" secondItem="fAB-Df-Vfn" secondAttribute="bottom" constant="24" id="6xa-zg-K9S"/>
                             <constraint firstItem="fAB-Df-Vfn" firstAttribute="top" secondItem="YaW-RH-2kG" secondAttribute="bottom" constant="20" id="9hS-8J-BVY"/>
-                            <constraint firstItem="XAh-it-9oj" firstAttribute="height" secondItem="gwW-3s-kJT" secondAttribute="height" multiplier="0.25" id="FzH-pJ-EWs"/>
+                            <constraint firstItem="XAh-it-9oj" firstAttribute="top" secondItem="Kt4-rp-uxJ" secondAttribute="top" constant="24" id="FgH-dn-iEQ"/>
                             <constraint firstItem="fAB-Df-Vfn" firstAttribute="leading" secondItem="Kt4-rp-uxJ" secondAttribute="leading" constant="100" id="Opj-31-lub"/>
                             <constraint firstItem="Kt4-rp-uxJ" firstAttribute="trailing" secondItem="YaW-RH-2kG" secondAttribute="trailing" id="Pnd-NU-hZB"/>
                             <constraint firstItem="XAh-it-9oj" firstAttribute="width" secondItem="gwW-3s-kJT" secondAttribute="width" id="VP0-tr-NQt"/>
@@ -1009,7 +1009,6 @@
                             <constraint firstItem="XAh-it-9oj" firstAttribute="centerX" secondItem="Kt4-rp-uxJ" secondAttribute="centerX" id="dgT-aL-8kB"/>
                             <constraint firstItem="YaW-RH-2kG" firstAttribute="top" secondItem="XAh-it-9oj" secondAttribute="bottom" id="jdm-cU-2eS"/>
                             <constraint firstItem="YaW-RH-2kG" firstAttribute="leading" secondItem="Kt4-rp-uxJ" secondAttribute="leading" id="kw3-sC-W4M"/>
-                            <constraint firstItem="XAh-it-9oj" firstAttribute="top" secondItem="Kt4-rp-uxJ" secondAttribute="top" constant="64" id="soy-lN-W5r"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="LnR-ov-vHB"/>
@@ -1017,6 +1016,10 @@
                         <outlet property="flightArrivalLabel" destination="BdX-OO-MHX" id="5DE-Dq-8K1"/>
                         <outlet property="flightDepartureLabel" destination="MKZ-6B-wiI" id="OK0-JH-VYo"/>
                         <outlet property="hotelAirbnbLabel" destination="2XT-XI-blc" id="Vl2-FV-vNV"/>
+                        <outlet property="staticAirBnBImageView" destination="Vc8-sL-RKQ" id="xaJ-MD-QCC"/>
+                        <outlet property="staticFlightArrivalLabel" destination="qTr-t9-sUg" id="AeA-9z-Apb"/>
+                        <outlet property="staticFlightDepartureLabel" destination="BWg-Sh-LdB" id="iCb-EB-Feu"/>
+                        <outlet property="staticHotelAirBnBLabel" destination="9yx-tH-Ts4" id="ZO7-0h-lUK"/>
                         <outlet property="tableView" destination="YaW-RH-2kG" id="B0T-sK-HwB"/>
                         <outlet property="tripDateLabel" destination="943-ut-naH" id="J7W-YP-g23"/>
                         <outlet property="tripNameLabel" destination="gmg-6k-UBb" id="8Gh-cA-DRH"/>
@@ -1514,7 +1517,7 @@
         <segue reference="sUL-gB-KDv"/>
         <segue reference="vE9-dT-EKZ"/>
         <segue reference="dGV-Da-kn8"/>
-        <segue reference="znz-mM-Txb"/>
+        <segue reference="Zam-a7-cpo"/>
         <segue reference="pcU-1e-Qrk"/>
     </inferredMetricsTieBreakers>
     <resources>
